fixes to alignement

--- a/sass/components/content/acknowledgments.scss
+++ b/sass/components/content/acknowledgments.scss
@@ -22,11 +22,13 @@
 
 .header{
 font-family: $cinzel;
-font-size: 1.7rem;
+font-size: 1.2rem;
 text-align: center;
-margin-bottom: 20px;
+margin: 1% auto;
+width: 100%;
 font-weight: 400;
 color: #FFFFFF;
+text-align: center;
 }
 
 .paragraph {
