--- a/style.css
+++ b/style.css
@@ -2657,11 +2657,13 @@ h2 {
 
 .header {
   font-family: "Cinzel Decorative", cursive;
-  font-size: 1.7rem;
+  font-size: 1.2rem;
   text-align: center;
-  margin-bottom: 20px;
+  margin: 1% auto;
+  width: 100%;
   font-weight: 400;
   color: #FFFFFF;
+  text-align: center;
 }
 
 .paragraph {
